objects/kugo2p__SalesQuoteOptionalLine__c.object
<CustomObject>
    <description>Kugamon - Related object to Quotes for Optional Product and Service Lines.</description>
    <fields>
        <fullName>kugo2p__LineDescription__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Line__c</fullName>
        <formula>Right(&apos;000&apos; + TEXT(kugo2p__SortOrder__c), 4)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot; + Id,  &quot;Detail&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductService__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product/Service</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Quote Optional Lines</relationshipLabel>
        <relationshipName>Quote_Optional_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesQuote__c</fullName>
        <label>Quote Number</label>
        <referenceTo>kugo2p__SalesQuote__c</referenceTo>
        <relationshipName>Sales_Quote_Optional_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote Optional Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Quote Optional Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Optional Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>